--- a/styleCV2.css
+++ b/styleCV2.css
@@ -53,3 +53,11 @@ body{
 .text-footer{
     margin-top: 400px;
 }
+.active{
+    background-color:rgba(32, 172, 247, 0.322);
+    border-radius: 15px;
+}
+.nav-link:hover{
+    background-color: rgba(0, 109, 128, 0.699);
+    border-radius: 15px;
+}
