--- a/styleCV.css
+++ b/styleCV.css
@@ -1,62 +1,65 @@
-body{
-    font-family: 'Josefin Sans', sans-serif;
+body {
+  font-family: "Josefin Sans", sans-serif;
+  
 }
-#firstRowHomePage{
-    min-height: 100vh;
-    background-image: url("/img/wallCrane3.jpeg");
-    background-position: center;
+#firstRowHomePage {
+  min-height: 100vh;
+  background-image: url("/img/wallCrane3.jpeg");
+  background-position: center;
 }
-#text-presentation{
-    background-color: #00000096;
-    margin-top: -5%;
+#text-presentation {
+  background-color: #00000096;
+  margin-top: -5%;
 }
-.description{
-    max-width: 600px;
-    margin: 10px auto;  
+.description {
+  max-width: 600px;
+  margin: 10px auto;
 }
-.big-text{
-    font-size: 40px;
-    font-weight: bold;
+.big-text {
+  font-size: 40px;
+  font-weight: bold;
 }
-.btn{
-    border-radius: 16px;
-}
-
-#mouseBtn i{
-    margin-top: 70px;
-    display:inline-block;
-    color:white;
-    font-size: 50px;
-    transform: rotate(180deg); 
-    transition: 0.5s;
-}
-#mouseBtn  i:hover{
-    transform: scale(2);
-    cursor: pointer;
-    color: rgb(69, 186, 219);
-    
-}
-#text-presentation-exp{
-    background-color: #00000096;
-    margin-top: -20%;
-}
-.experiences{
-    margin-bottom: 50px;
+.btn {
+  border-radius: 16px;
 }
 
-.text-experience{
-    margin-top: 150px;
+#mouseBtn i {
+  margin-top: 70px;
+  display: inline-block;
+  color: white;
+  font-size: 50px;
+  transform: rotate(180deg);
+  transition: 0.5s;
+}
+#mouseBtn i:hover {
+  transform: scale(2);
+  cursor: pointer;
+  color: rgb(69, 186, 219);
+}
+#text-presentation-exp {
+  background-color: #00000096;
+  margin-top: -20%;
+}
+.experiences {
+  margin-bottom: 50px;
 }
 
-.size-img-card{
-    width: 70px;
-    height:auto;
+.text-experience {
+  margin-top: 150px;
 }
-.active{
-    background-color:rgba(32, 172, 247, 0.322);
-    border-radius: 15px;
+
+.size-img-card {
+  width: 70px;
+  height: auto;
 }
-.nav-link:hover{
-    background-color: rgba(0, 109, 128, 0.699);
-    border-radius: 15px;
+.active {
+  background-color: rgba(32, 172, 247, 0.322);
+  border-radius: 15px;
 }
+.nav-link:hover {
+  background-color: rgba(0, 109, 128, 0.699);
+  border-radius: 15px;
+}
+
+
+  
